--- a/package.json
+++ b/package.json
@@ -9,7 +9,14 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.11.3",
+    "@emotion/react": "^11.14.0",
+    "@emotion/server": "^11.11.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.4",
+    "@prisma/client": "^6.3.1",
     "next": "15.1.6",
+    "prisma": "^6.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
