--- a/package.json
+++ b/package.json
@@ -9,38 +9,39 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.12.0",
-    "@emotion/react": "^11.14.0",
-    "@emotion/server": "^11.11.0",
-    "@emotion/styled": "^11.14.0",
-    "@mui/material": "^6.4.5",
-    "@mui/styled-engine-sc": "^6.4.3",
-    "@prisma/client": "^6.3.1",
-    "next": "15.1.6",
-    "prisma": "^6.3.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "styled-components": "^6.1.15"
+    "@clerk/nextjs": "6.12.1",
+    "@emotion/react": "11.14.0",
+    "@emotion/server": "11.11.0",
+    "@emotion/styled": "11.14.0",
+    "@mui/icons-material": "6.4.6",
+    "@mui/material": "6.4.6",
+    "@mui/styled-engine-sc": "6.4.3",
+    "@prisma/client": "6.3.1",
+    "next": "15.2.0",
+    "prisma": "6.3.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "styled-components": "6.1.15"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.2.0",
-    "@eslint/js": "^9.19.0",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@typescript-eslint/eslint-plugin": "^8.22.0",
-    "@typescript-eslint/parser": "^8.22.0",
-    "eslint": "^9.19.0",
+    "@eslint/eslintrc": "3.2.0",
+    "@eslint/js": "9.19.0",
+    "@types/node": "20.17.16",
+    "@types/react": "19.0.8",
+    "@types/react-dom": "19.0.3",
+    "@typescript-eslint/eslint-plugin": "8.22.0",
+    "@typescript-eslint/parser": "8.22.0",
+    "eslint": "9.19.0",
     "eslint-config-next": "15.1.6",
-    "eslint-config-prettier": "^10.0.1",
-    "eslint-plugin-prettier": "^5.2.3",
-    "eslint-plugin-react": "^7.37.4",
-    "globals": "^15.14.0",
-    "husky": "^9.1.7",
-    "lint-staged": "^15.4.3",
+    "eslint-config-prettier": "10.0.1",
+    "eslint-plugin-prettier": "5.2.3",
+    "eslint-plugin-react": "7.37.4",
+    "globals": "15.14.0",
+    "husky": "9.1.7",
+    "lint-staged": "15.4.3",
     "prettier": "3.4.2",
-    "typescript": "^5",
-    "typescript-eslint": "^8.22.0"
+    "typescript": "5.7.3",
+    "typescript-eslint": "8.22.0"
   },
   "husky": {
     "hooks": {
