--- a/package.json
+++ b/package.json
@@ -17,15 +17,25 @@
     "@mui/material": "6.4.6",
     "@mui/styled-engine-sc": "6.4.3",
     "@prisma/client": "6.3.1",
+    "@react-three/drei": "^10.0.4",
+    "@react-three/fiber": "^9.1.0",
+    "@types/jszip": "^3.4.0",
+    "@types/lodash": "^4.17.16",
+    "file-saver": "^2.0.5",
+    "jszip": "^3.10.1",
+    "lodash": "^4.17.21",
     "next": "15.2.0",
     "prisma": "6.3.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "styled-components": "6.1.15"
+    "react-papaparse": "^4.4.0",
+    "styled-components": "6.1.15",
+    "three": "^0.174.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "3.2.0",
     "@eslint/js": "9.19.0",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "20.17.16",
     "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3",
