--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "file-saver": "^2.0.5",
     "jszip": "^3.10.1",
     "lodash": "^4.17.21",
+    "mysql2": "^3.13.0",
     "next": "15.2.0",
     "prisma": "6.3.1",
     "react": "19.0.0",
