--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "eslint . --fix",
     "lint:watch": "eslint . --fix --watch",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
-    "prepare": "husky"
+    "prepare": "husky",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "@clerk/nextjs": "6.12.1",
@@ -30,6 +33,7 @@
     "lodash": "^4.17.21",
     "mysql2": "^3.13.0",
     "next": "15.2.0",
+    "next-router-mock": "^0.9.13",
     "open-graph-scraper": "^6.9.0",
     "prisma": "6.3.1",
     "react": "19.0.0",
@@ -41,10 +45,14 @@
   "devDependencies": {
     "@eslint/eslintrc": "3.2.0",
     "@eslint/js": "9.19.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/file-saver": "^2.0.7",
+    "@types/jest": "^29.5.14",
     "@types/node": "20.17.16",
-    "@types/react": "19.0.8",
-    "@types/react-dom": "19.0.3",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
     "@typescript-eslint/eslint-plugin": "8.22.0",
     "@typescript-eslint/parser": "8.22.0",
     "eslint": "9.19.0",
@@ -54,9 +62,12 @@
     "eslint-plugin-react": "7.37.4",
     "globals": "15.14.0",
     "husky": "^9.1.7",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "15.4.3",
     "prettier": "3.4.2",
-    "typescript": "5.7.3",
+    "ts-jest": "^29.3.2",
+    "typescript": "^5.7.3",
     "typescript-eslint": "8.22.0"
   },
   "husky": {
