moved emails to env

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,6 @@ CLERK_SECRET_KEY=clerk_secret_key_here
 
 # Backend URL
 NEXT_PUBLIC_BACKEND_URL=backend_url_here
+
+# Admin Emails
+ADMIN_EMAILS="user1@email.com,user2@email.com"
